--- a/Task 2 - Flexbox/index.html
+++ b/Task 2 - Flexbox/index.html
@@ -5,7 +5,9 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/Task 2 - Flexbox/style.css">
 </head>
+
 <body>
+    <!-- Nav Bar -->
     <div class="nav">
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
@@ -18,10 +20,9 @@
                 <span>Movies</span>
             </label>
         </div>
-
         <!-- Search Box -->
         <input type="text" placeholder="Search..">
-
+        <!-- Nav Links -->
         <div class="nav-links">
             <a href="#" target="_blank">Movies</a>
             <a href="#" target="_blank">TV</a>
@@ -30,7 +31,9 @@
         </div>
     </div>
 
+    <!-- Container -->
     <div class="container">
+        <!-- Cards -->
         <div class="card-1">
             <!-- Image -->
             <img src="/Task 2 - Flexbox/img/avengers.jpg" alt="Avengers">
@@ -43,8 +46,9 @@
                 <button>More Info...</button>
             </div>
         </div>
+        <!-- Cards -->
         <div class="card-2">
-            <!-- Cards -->
+            <!-- Content -->
             <div class="content1">
                 <!-- Image -->
                 <img src="/Task 2 - Flexbox/img/lone-gunmen.jpg" alt="Lone Gunmen">
@@ -56,6 +60,7 @@
                     <button>More Info...</button>
                 </div>
             </div>
+            <!-- Content -->
             <div class="content2">
                 <!-- Image -->
                 <img src="/Task 2 - Flexbox/img/millenium.jpg" alt="Millenium">
@@ -66,6 +71,7 @@
                     <button>More Info...</button>
                 </div>
             </div>
+            <!-- Content -->
             <div class="content3">
                 <!-- Image -->
                 <img src="/Task 2 - Flexbox/img/predators.jpg" alt="Predators">
@@ -77,6 +83,7 @@
                     <button>More Info...</button>
                 </div>
             </div>
+            <!-- Content -->
             <div class="content4">
                 <!-- Image -->
                 <img src="/Task 2 - Flexbox/img/rage.jpg" alt="Rage">
@@ -90,6 +97,7 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer>
         <p>Copyright &copy; 2021 What's On</p>
     </footer>
